<resources>
    <string name="app_name">OTP_demo</string>
    <string name="blackcoffer">BlackCoffer</string>
    <string name="hi_there">Hi There :)</string>
    <string name="login_to_the_best_experience">Login to the best experience</string>
    <string name="sign_up_txt">Register to begin this great journey</string>
    <string name="e_mail">E-mail Address</string>
    <string name="username">Username</string>
    <string name="name">Full Name</string>
    <string name="number">Phone Number</string>
    <string name="password">Password</string>
    <string name="next">Login</string>
    <string name="sign_in_with">Sign in with google</string>
    <string name="verify">Verify Code</string>
    <string name="resend">Resend Code</string>
    <string name="reg_send">Verify my number</string>
    <string name="get_started">Get Started</string>
    <string name="register">Register</string>
    <string name="or_login_with">Or Login With</string>
    <string name="one_time_pass">A One time password will be sent \nto verify your Number</string>
    <string name="four_digits">Enter the 4 digits OTP sent</string>
    <string name="logout_con_txt">Are you sure you want to logout?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="tags">Tags</string>
    <string name="trending">Trending</string>
    <string name="explore">Explore</string>
    <string name="saved">Saved</string>
    <string name="tags_lbl">#tags</string>
    <string name="location_txt">Golf Course Road, Delhi</string>
    <string name="search_tags">Search tags</string>
    <string name="foodie">#foodie  </string>
    <string name="guruji">#guruji  </string>
    <string name="fifa">#fifa20  </string>
    <string name="broadcast">Broadcast</string>
    <string name="techmonday">#techmonday</string>
    <string name="people_nearby">11 people nearby</string>
    <string name="covid">#covid-19</string>
    <string name="people_nearby_twelve">12 people nearby</string>
    <string name="fifa_cup">#fifa cup</string>
    <string name="people_nearby_eight">8 people nearby</string>
    <string name="lockdown">#lockdown</string>
    <string name="people_nearby_seven">7 people nearby</string>
    <string name="people_nearby_four">4 people nearby</string>
    <string name="people_nearby_two">2 people nearby</string>
    <string name="explore_tags">Explore #tags</string>
    <string name="search_by_tags">Search by tags...</string>
    <string name="ellen_michelle">Ellen Michelle</string>
    <string name="arc_vive_txt">Arc Vive Ltd, CEO</string>
    <string name="loremipsum_txt">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi, sed ratione. Architecto ducimus, tempora debitis, cupiditate laboriosam quos.</string>
    <string name="startups">#startups</string>
    <string name="invite">INVITE</string>
    <string name="save">SAVE</string>
    <string name="isaac_morgan">Isaac Morgan</string>
    <string name="joe_pipes">Joe pipes ltd, HR</string>
    <string name="saved_tags">Saved #tags</string>
    <string name="enter_confirmation_code">Enter Digits Sent to you</string>
    <string name="otp_hint">0000</string>
    <string name="country_code">91</string>
</resources>
